--- a/public/index.html
+++ b/public/index.html
@@ -1,121 +1,220 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Miles &amp; Vojak Wedding</title>
+<html lang="en">
 
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
-    <link rel="stylesheet" href="./assets/css/custom.css" type="text/css">
+  <head>
+
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="">
+    <meta name="author" content="">
+
+    <title>Grayscale - Start Bootstrap Theme</title>
+
+    <!-- Bootstrap core CSS -->
+    <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+
+    <!-- Custom fonts for this template -->
+    <link href="vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic" rel="stylesheet" type="text/css">
+    <link href='https://fonts.googleapis.com/css?family=Cabin:700' rel='stylesheet' type='text/css'>
+
+    <!-- Custom styles for this template -->
+    <link href="css/grayscale.css" rel="stylesheet">
+    <link href="css/custom.css" rel="stylesheet">
   </head>
 
-  <body>
+  <body id="page-top">
 
-    <!-- Caligrapy header -->
-    <section class="row">
-      <!-- TODO: Insert caligraphy -->
-    </section>
+    <!-- Intro Header -->
+    <header class="masthead">
+      <div class="intro-body">
+        <div class="container">
 
-    <!-- Navigation links -->
-    <section class="row">
+          <!-- TODO: Need to enable swapping for mobile version -->
+          <img  src="img/caligraphy-desktop.svg" />
+
+          <!-- <div class="row">
+            <div class="col-lg-8 mx-auto"> -->
+              <nav class="navbar navbar-expand-lg navbar-light" data-toggle="sticky-onscroll" id="mainNav" style="background-color: #E5E5E5; border-bottom: none;">
+                <div class="container" style="background-color: #E5E5E5;">
+                  <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+                    Menu
+                    <i class="fa fa-bars"></i>
+                  </button>
+                  <div class="collapse navbar-collapse" id="navbarResponsive">
+                    <ul class="navbar-nav ml-auto nav-fill w-100">
+                      <li class="nav-item">
+                        <a class="nav-link js-scroll-trigger" href="#wedding">Wedding</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link js-scroll-trigger" href="#accomodations">Accomodations</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link js-scroll-trigger" href="#registry">Registry</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link js-scroll-trigger" href="#rsvp">RSVP</a>
+                      </li>
+                    </ul>
+                  </div>
+                </div>
+              </nav>
+            <!-- </div>
+          </div> -->
+
+          <div class="row">
+            <div class="col-lg-8 mx-auto">
+              <a href="#wedding" class="btn btn-circle js-scroll-trigger">
+                <i class="fa fa-angle-double-down animated"></i>
+              </a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </header>
+
+
+
+    <!-- Wedding Section -->
+    <section id="wedding" class="content-section text-center">
       <div class="container">
-        <div class="row text-center">
-          <div class="col-sm">
-            <a href="#wedding">Wedding</a>
-          </div>
-          <div class="col-sm">
-            <a href="#accomodations">Accomodations</a>
-          </div>
-          <div class="col-sm">
-            <a href="#registry">Registry</a>
-          </div>
-          <div class="col-sm">
-            <a href="#rsvp">RSVP</a>
+        <div class="row">
+          <div class="col-lg-8 mx-auto">
+            <p>
+              Ceremony: Saturday August 25, 2018; 5:00 pm; Riverside Receptions &amp; Conference Center 35 North River Lane Geneva Illinois 60134
+            </p>
+            <p>
+              Join us for a reception immediately following the ceremony at Riverside Receptions &amp; Conference Center.
+            </p>
+            <p>
+              Pleast note, we will be having an Unplugged Ceremony. We will ask that you turn off all cameras, cell phones and other electronics until after the ceremony to be fully present during our special moment.
+            </p>
+            <p>
+              Attire Formal
+            </p>
           </div>
         </div>
       </div>
     </section>
 
-    <!-- Cover image -->
-    <section class="row">
+    <!-- Accomodations Section -->
+    <section id="accomodations" class="download-section content-section text-center">
       <div class="container">
-        <img src="./assets/img/IMG_5132.jpeg" width="100%"/>
+        <div class="col-lg-8 mx-auto">
+          <h2>Accomodations</h2>
+          <p>
+            A block of rooms has been reserved for our guests at a discounted rate. Please use the group code MILVOJ online or reference the Miles Vojak wedding when calling.
+          </p>
+          <p>
+            Transportation will be available for guests staying at Hilton Garden Inn. Transportation will leave the hotel at 4:15 pm to Riverside Receptions. Following the reception, transportation will return at 11:30 pm.
+          </p>
+          <!-- TODO: Photo of Hilton Garden Inn St. Charles logo with link to book room with group code -->
+          <!-- TODO: Address of hotel -->
+          <!-- TODO: Google map of where hotel is located -->
+
+          <p>
+            Parking A free parking lot is available across the street from Riverside Receptions. Street parking is also avaible.
+          </p>
+          <p>
+            Questions? Please contact <a href="mailto:milesvojakwedding@gmail.com">milesvojakwedding@gmail.com</a>
+          </p>
+        </div>
       </div>
     </section>
 
-    <!-- Wedding date -->
-    <section class="row">
-      <div class="container text-center">
-        <p>
-          August 25, 2018
-        </p>
-      </div>
-    </section>
-
-    <!-- Wedding information -->
-    <section class="row" id="wedding">
-      <div class="container text-center">
-        <p>
-          Ceremony: Saturday August 25, 2018; 5:00 pm; Riverside Receptions &amp; Conference Center 35 North River Lane Geneva Illinois 60134
-        </p>
-        <p>
-          Join us for a reception immediately following the ceremony at Riverside Receptions &amp; Conference Center.
-        </p>
-        <p>
-          Pleast note, we will be having an Unplugged Ceremony. We will ask that you turn off all cameras, cell phones and other electronics until after the ceremony to be fully present during our special moment.
-        </p>
-        <p>
-          Attire Formal
-        </p>
-      </div>
-    </section>
-
-    <!-- Accomodations -->
-    <section class="row" id="accomodations">
-      <div class="container text-center">
-        <h2>Accomodations</h2>
-        <p>
-          A block of rooms has been reserved for our guests at a discounted rate. Please use the group code MILVOJ online or reference the Miles Vojak wedding when calling.
-        </p>
-        <p>
-          Transportation will be available for guests staying at Hilton Garden Inn. Transportation will leave the hotel at 4:15 pm to Riverside Receptions. Following the reception, transportation will return at 11:30 pm.
-        </p>
-        <!-- TODO: Photo of Hilton Garden Inn St. Charles logo with link to book room with group code -->
-        <!-- TODO: Address of hotel -->
-        <!-- TODO: Google map of where hotel is located -->
-
-        <p>
-          Parking A free parking lot is available across the street from Riverside Receptions. Street parking is also avaible.
-        </p>
-        <p>
-          Questions? Please contact <a href="mailto:milesvojakwedding@gmail.com">milesvojakwedding@gmail.com</a>
-        </p>
-      </div>
-    </section>
-
-    <!-- Registry -->
-    <section class="row" id="registry">
-      <div class="container text-center">
-        <h2>Registry</h2>
-        <!-- TODO: Use photos of each store to link to our registry -->
-        <div class="row text-center">
-          <div class="col-sm">
-            Bed Bath &amp; Beyond
-          </div>
-          <div class="col-sm">
-            Macy's
-          </div>
-          <div class="col-sm">
-            Crate &amp; Barrel
+    <!-- Registry Section -->
+    <section id="registry" class="content-section text-center">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-8 mx-auto">
+            <h2>Registry</h2>
+            <!-- TODO: Use photos of each store to link to our registry -->
+            <div class="row text-center">
+              <div class="col-sm">
+                Bed Bath &amp; Beyond
+              </div>
+              <div class="col-sm">
+                Macy's
+              </div>
+              <div class="col-sm">
+                Crate &amp; Barrel
+              </div>
+            </div>
           </div>
         </div>
       </div>
     </section>
+
+    <!-- RSVP Section -->
+    <section id="rsvp" class="download-section content-section text-center">
+      <div class="container">
+        <div class="col-lg-8 mx-auto">
+          <h2>RSVP</h2>
+        </div>
+      </div>
+    </section>
+
+    <!-- Map Section -->
+    <div id="map"></div>
+
+    <!-- Footer -->
+    <footer>
+      <div class="container text-center">
+        <!-- <p>Copyright &copy; Your Website 2017</p> -->
+      </div>
+    </footer>
+
+    <!-- Bootstrap core JavaScript -->
+    <script src="vendor/jquery/jquery.min.js"></script>
+    <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+
+    <!-- Plugin JavaScript -->
+    <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
+
+    <!-- Google Maps API Key - Use your own API key to enable the map feature. More information on the Google Maps API can be found at https://developers.google.com/maps/ -->
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCRngKslUGJTlibkQ3FkfTxj3Xss1UlZDA&sensor=false"></script>
+
+    <!-- Custom scripts for this template -->
+    <script src="js/grayscale.min.js"></script>
+
+    <script>
+      // All this JS from https://bootbites.com/articles/freebie-sticky-bootstrap-navbar-scroll-bootstrap-4/
+      $(document).ready(function() {
+      // Custom
+      var stickyToggle = function(sticky, stickyWrapper, scrollElement) {
+        var stickyHeight = sticky.outerHeight();
+        var stickyTop = stickyWrapper.offset().top;
+
+        const mq = window.matchMedia( "(max-width: 992px)" ); // If the collapsed menu is shown, always stick it to the top
+
+        if (scrollElement.scrollTop() >= stickyTop || mq.matches){
+          stickyWrapper.height(stickyHeight);
+          sticky.addClass("is-sticky");
+        }
+        else{
+          sticky.removeClass("is-sticky");
+          stickyWrapper.height('auto');
+        }
+      };
+
+      // Find all data-toggle="sticky-onscroll" elements
+      $('[data-toggle="sticky-onscroll"]').each(function() {
+        var sticky = $(this);
+        var stickyWrapper = $('<div>').addClass('sticky-wrapper'); // insert hidden element to maintain actual top offset on page
+        sticky.before(stickyWrapper);
+        sticky.addClass('sticky');
+
+        // Scroll & resize events
+        $(window).on('scroll.sticky-onscroll resize.sticky-onscroll', function() {
+          stickyToggle(sticky, stickyWrapper, $(this));
+        });
+
+        // On page load
+        stickyToggle(sticky, stickyWrapper, $(window));
+      });
+    });
+    </script>
 
   </body>
-
-  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
 
 </html>
