--- a/public/index.html
+++ b/public/index.html
@@ -31,12 +31,13 @@
         <div class="container">
 
           <!-- TODO: Need to enable swapping for mobile version -->
-          <img  src="img/caligraphy-desktop.svg" />
+          <img src="img/caligraphy-desktop.svg" id="caligraphy-desktop" />
+          <img src="img/caligraphy-mobile.svg" id="caligraphy-mobile" />
 
           <!-- <div class="row">
             <div class="col-lg-8 mx-auto"> -->
               <nav class="navbar navbar-expand-lg navbar-light" data-toggle="sticky-onscroll" id="mainNav" style="background-color: #E5E5E5; border-bottom: none;">
-                <div class="container" style="background-color: #E5E5E5;">
+                <div class="container" style="">
                   <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                     Menu
                     <i class="fa fa-bars"></i>
