--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Grayscale - Start Bootstrap Theme</title>
+    <title>Andrew &amp; Amanda</title>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -36,7 +36,7 @@
 
           <!-- <div class="row">
             <div class="col-lg-8 mx-auto"> -->
-              <nav class="navbar navbar-expand-lg navbar-light" data-toggle="sticky-onscroll" id="mainNav" style="background-color: #E5E5E5; border-bottom: none;">
+              <nav class="navbar navbar-expand-lg navbar-light" data-toggle="sticky-onscroll" id="mainNav" style="background-color: transparent; border-bottom: 0px;">
                 <div class="container" style="">
                   <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                     Menu
@@ -45,16 +45,16 @@
                   <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav ml-auto nav-fill w-100">
                       <li class="nav-item">
-                        <a class="nav-link js-scroll-trigger" href="#wedding">Wedding</a>
+                        <a class="nav-link js-scroll-trigger" href="#wedding" style="color:black;">Wedding</a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link js-scroll-trigger" href="#accomodations">Accomodations</a>
+                        <a class="nav-link js-scroll-trigger" href="#accomodations" style="color:black;">Accomodations</a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link js-scroll-trigger" href="#registry">Registry</a>
+                        <a class="nav-link js-scroll-trigger" href="#registry" style="color:black;">Registry</a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link js-scroll-trigger" href="#rsvp">RSVP</a>
+                        <a class="nav-link js-scroll-trigger" href="#rsvp" style="color:black;">RSVP</a>
                       </li>
                     </ul>
                   </div>
@@ -101,7 +101,7 @@
     <section class="parallax-img-1"></section>
 
     <!-- Accomodations Section -->
-    <section id="accomodations" class="download-section content-section text-center">
+    <section id="accomodations" class="content-section text-center">
       <div class="container">
         <div class="col-lg-8 mx-auto">
           <h2>Accomodations</h2>
@@ -153,7 +153,7 @@
     <section class="parallax-img-3"></section>
 
     <!-- RSVP Section -->
-    <section id="rsvp" class="download-section content-section text-center">
+    <section id="rsvp" class="content-section text-center">
       <div class="container">
         <div class="col-lg-8 mx-auto">
           <h2>RSVP</h2>
@@ -163,11 +163,24 @@
 
     <!-- Map Section -->
     <div id="map"></div>
+    <script>
+      function initMap() {
+        var uluru = {lat: 41.887, lng: -88.303};
+        var map = new google.maps.Map(document.getElementById('map'), {
+          zoom: 15,
+          center: uluru
+        });
+        var marker = new google.maps.Marker({
+          position: uluru,
+          map: map
+        });
+      }
+    </script>
 
     <!-- Footer -->
     <footer>
-      <div class="container text-center">
-        <p>Copyright &copy; Your Website 2017</p>
+      <div class="container text-center text-muted">
+        <p><a href="http://www.courtneycimo.com/" target="_blank"><i class="fa fa-camera" aria-hidden="true"></i> Courtney Cimo</a></p>
       </div>
     </footer>
 
@@ -179,7 +192,7 @@
     <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
 
     <!-- Google Maps API Key - Use your own API key to enable the map feature. More information on the Google Maps API can be found at https://developers.google.com/maps/ -->
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCRngKslUGJTlibkQ3FkfTxj3Xss1UlZDA&sensor=false"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAACFgnAFXmaiRMycm7jvhqTNnKobWaanY&sensor=false&callback=initMap"></script>
 
     <!-- Custom scripts for this template -->
     <script src="js/grayscale.min.js"></script>
@@ -187,39 +200,72 @@
     <script>
       // All this JS from https://bootbites.com/articles/freebie-sticky-bootstrap-navbar-scroll-bootstrap-4/
       $(document).ready(function() {
-      // Custom
-      var stickyToggle = function(sticky, stickyWrapper, scrollElement) {
-        var stickyHeight = sticky.outerHeight();
-        var stickyTop = stickyWrapper.offset().top;
+        // Custom
+        var stickyToggle = function(sticky, stickyWrapper, scrollElement) {
+          var stickyHeight = sticky.outerHeight();
+          var stickyTop = stickyWrapper.offset().top;
 
-        const mq = window.matchMedia( "(max-width: 992px)" ); // If the collapsed menu is shown, always stick it to the top
+          const mq = window.matchMedia( "(max-width: 992px)" ); // If the collapsed menu is shown, always stick it to the top
 
-        if (scrollElement.scrollTop() >= stickyTop || mq.matches){
-          stickyWrapper.height(stickyHeight);
-          sticky.addClass("is-sticky");
-        }
-        else{
-          sticky.removeClass("is-sticky");
-          stickyWrapper.height('auto');
-        }
-      };
+          if (scrollElement.scrollTop() >= stickyTop || mq.matches){
+            stickyWrapper.height(stickyHeight);
+            sticky.addClass("is-sticky");
+          }
+          else{
+            sticky.removeClass("is-sticky");
+            stickyWrapper.height('auto');
+          }
+        };
 
-      // Find all data-toggle="sticky-onscroll" elements
-      $('[data-toggle="sticky-onscroll"]').each(function() {
-        var sticky = $(this);
-        var stickyWrapper = $('<div>').addClass('sticky-wrapper'); // insert hidden element to maintain actual top offset on page
-        sticky.before(stickyWrapper);
-        sticky.addClass('sticky');
+        // Find all data-toggle="sticky-onscroll" elements
+        $('[data-toggle="sticky-onscroll"]').each(function() {
+          var sticky = $(this);
+          var stickyWrapper = $('<div>').addClass('sticky-wrapper'); // insert hidden element to maintain actual top offset on page
+          sticky.before(stickyWrapper);
+          sticky.addClass('sticky');
 
-        // Scroll & resize events
-        $(window).on('scroll.sticky-onscroll resize.sticky-onscroll', function() {
-          stickyToggle(sticky, stickyWrapper, $(this));
+          // Scroll & resize events
+          $(window).on('scroll.sticky-onscroll resize.sticky-onscroll', function() {
+            stickyToggle(sticky, stickyWrapper, $(this));
+          });
+
+          // On page load
+          stickyToggle(sticky, stickyWrapper, $(window));
         });
-
-        // On page load
-        stickyToggle(sticky, stickyWrapper, $(window));
       });
-    });
+
+      $(window).scroll(function(){
+        // var fromTopPx = 200; // distance to trigger
+        // var scrolledFromtop = $(window).scrollTop();
+        // if(scrolledFromtop > fromTopPx){
+        //     $('body').addClass('scrolled');
+        // }else{
+        //     $('body').removeClass('scrolled');
+        // }
+
+        var trigger1 = $('#wedding').offset().top; // distance to trigger
+        var trigger2 = $('#accomodations').offset().top;
+        var trigger3 = $('#registry').offset().top;
+
+        var scrolledFromtop = $(window).scrollTop();
+        if (scrolledFromtop > trigger1 && scrolledFromtop <= trigger2) {
+          $('body').addClass('scrolled1');
+          $('body').removeClass('scrolled2');
+          $('body').removeClass('scrolled3');
+        } else if (scrolledFromtop > trigger2 && scrolledFromtop <= trigger3) {
+          $('body').addClass('scrolled2');
+          $('body').removeClass('scrolled1');
+          $('body').removeClass('scrolled3');
+        } else if (scrolledFromtop > trigger3){
+          $('body').addClass('scrolled3');
+          $('body').removeClass('scrolled1');
+          $('body').removeClass('scrolled2');
+        } else {
+          $('body').removeClass('scrolled1');
+          $('body').removeClass('scrolled2');
+          $('body').removeClass('scrolled3');
+        }
+      });
     </script>
 
   </body>
