--- a/public/index.html
+++ b/public/index.html
@@ -192,10 +192,10 @@
     <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
 
     <!-- Google Maps API Key - Use your own API key to enable the map feature. More information on the Google Maps API can be found at https://developers.google.com/maps/ -->
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAACFgnAFXmaiRMycm7jvhqTNnKobWaanY&sensor=false&callback=initMap"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDadpn8iRQyRtyhizTCHblba4WIuaw5K7Q&sensor=false&callback=initMap"></script>
 
     <!-- Custom scripts for this template -->
-    <script src="js/grayscale.min.js"></script>
+    <script src="js/grayscale.js"></script>
 
     <script>
       // All this JS from https://bootbites.com/articles/freebie-sticky-bootstrap-navbar-scroll-bootstrap-4/
