fixing google maps location

--- a/public/index.html
+++ b/public/index.html
@@ -165,7 +165,7 @@
     <div id="map"></div>
     <script>
       function initMap() {
-        var uluru = {lat: 41.887, lng: -88.303};
+        var uluru = {lat: 41.8878155, lng: -88.3031561};
         var map = new google.maps.Map(document.getElementById('map'), {
           zoom: 15,
           center: uluru
