Adding parallax effect

--- a/public/index.html
+++ b/public/index.html
@@ -63,13 +63,13 @@
             <!-- </div>
           </div> -->
 
-          <div class="row">
+          <!-- <div class="row">
             <div class="col-lg-8 mx-auto">
               <a href="#wedding" class="btn btn-circle js-scroll-trigger">
                 <i class="fa fa-angle-double-down animated"></i>
               </a>
             </div>
-          </div>
+          </div> -->
         </div>
       </div>
     </header>
@@ -98,6 +98,8 @@
       </div>
     </section>
 
+    <section class="parallax-img-1"></section>
+
     <!-- Accomodations Section -->
     <section id="accomodations" class="download-section content-section text-center">
       <div class="container">
@@ -123,6 +125,8 @@
       </div>
     </section>
 
+    <section class="parallax-img-2"></section>
+
     <!-- Registry Section -->
     <section id="registry" class="content-section text-center">
       <div class="container">
@@ -146,6 +150,8 @@
       </div>
     </section>
 
+    <section class="parallax-img-3"></section>
+
     <!-- RSVP Section -->
     <section id="rsvp" class="download-section content-section text-center">
       <div class="container">
@@ -161,7 +167,7 @@
     <!-- Footer -->
     <footer>
       <div class="container text-center">
-        <!-- <p>Copyright &copy; Your Website 2017</p> -->
+        <p>Copyright &copy; Your Website 2017</p>
       </div>
     </footer>
 
