--- a/public/index.html
+++ b/public/index.html
@@ -36,7 +36,7 @@
 
           <!-- <div class="row">
             <div class="col-lg-8 mx-auto"> -->
-              <nav class="navbar navbar-expand-lg navbar-light" data-toggle="sticky-onscroll" id="mainNav" style="background-color: transparent; border-bottom: 0px;">
+              <nav class="navbar navbar-expand-lg navbar-light" data-toggle="sticky-onscroll" id="mainNav" style="">
                 <div class="container" style="">
                   <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                     Menu
