Clean styling of nav links

--- a/public/index.html
+++ b/public/index.html
@@ -45,16 +45,16 @@
                   <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav ml-auto nav-fill w-100">
                       <li class="nav-item">
-                        <a class="nav-link js-scroll-trigger" href="#wedding" style="color:black;">Wedding</a>
+                        <a class="nav-link js-scroll-trigger" href="#wedding">Wedding</a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link js-scroll-trigger" href="#accomodations" style="color:black;">Accomodations</a>
+                        <a class="nav-link js-scroll-trigger" href="#accomodations">Accomodations</a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link js-scroll-trigger" href="#registry" style="color:black;">Registry</a>
+                        <a class="nav-link js-scroll-trigger" href="#registry">Registry</a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link js-scroll-trigger" href="#rsvp" style="color:black;">RSVP</a>
+                        <a class="nav-link js-scroll-trigger" href="#rsvp">RSVP</a>
                       </li>
                     </ul>
                   </div>
