--- a/public/index.html
+++ b/public/index.html
@@ -36,8 +36,8 @@
 
           <!-- <div class="row">
             <div class="col-lg-8 mx-auto"> -->
-              <nav class="navbar navbar-expand-lg navbar-light" data-toggle="sticky-onscroll" id="mainNav" style="">
-                <div class="container" style="">
+              <nav class="navbar navbar-expand-lg navbar-light" data-toggle="sticky-onscroll" id="mainNav">
+                <div class="container">
                   <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                     Menu
                     <i class="fa fa-bars"></i>
@@ -130,13 +130,13 @@
             <!-- TODO: Use photos of each store to link to our registry -->
             <div class="row text-center">
               <div class="col-sm">
-                Bed Bath &amp; Beyond
+                <button class="btn-default" type="button">Bed Bath &amp; Beyond &#187;</button>
               </div>
               <div class="col-sm">
-                Macy's
+                <button class="btn-default" type="button">Macy's &#187;</button>
               </div>
               <div class="col-sm">
-                Crate &amp; Barrel
+                <button class="btn-default" type="button">Crate &amp; Barrel &#187;</button>
               </div>
             </div>
           </div>
@@ -149,6 +149,11 @@
       <div class="container">
         <div class="col-lg-8 mx-auto">
           <h2>RSVP</h2>
+          <div class="row text-center">
+            <div class="col-sm">
+              <button class="btn-default" type="button">RSVP Online &#187;</button>
+            </div>
+          </div>
         </div>
       </div>
     </section>
