Add registry links

--- a/public/index.html
+++ b/public/index.html
@@ -130,13 +130,19 @@
             <!-- TODO: Use photos of each store to link to our registry -->
             <div class="row text-center">
               <div class="col-sm">
-                <button class="btn-default" type="button">Bed Bath &amp; Beyond &#187;</button>
+                <a href="https://www.bedbathandbeyond.com/store/giftregistry/view_registry_guest.jsp?pwsToken=&eventType=Wedding&inventoryCallEnabled=true&registryId=545278823&pwsurl=" class="btn-default" target="_blank">
+                  Bed Bath &amp; Beyond &#187;
+                </a>
               </div>
               <div class="col-sm">
-                <button class="btn-default" type="button">Macy's &#187;</button>
+                <a href="https://www.macys.com/wgl/registry/guest/6852111" class="btn-default" target="_blank">
+                  Macy's &#187;
+                </a>
               </div>
               <div class="col-sm">
-                <button class="btn-default" type="button">Crate &amp; Barrel &#187;</button>
+                <a href="https://www.crateandbarrel.com/gift-registry/andrew-vojak-and-amanda-miles/r5771735" class="btn-default" target="_blank">
+                  Crate &amp; Barrel &#187;
+                </a>
               </div>
             </div>
           </div>
@@ -151,7 +157,7 @@
           <h2>RSVP</h2>
           <div class="row text-center">
             <div class="col-sm">
-              <button class="btn-default" type="button">RSVP Online &#187;</button>
+              <a href="#" class="btn-default">RSVP Online &#187;</a>
             </div>
           </div>
         </div>
