Adding RSVP page

--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,6 @@
 <html lang="en">
 
   <head>
-
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
@@ -30,7 +29,6 @@
       <div class="intro-body">
         <div class="container">
 
-          <!-- TODO: Need to enable swapping for mobile version -->
           <img src="img/caligraphy-desktop.svg" id="caligraphy-desktop" />
           <img src="img/caligraphy-mobile.svg" id="caligraphy-mobile" />
 
@@ -156,7 +154,7 @@
           <h2>RSVP</h2>
           <div class="row text-center">
             <div class="col-sm">
-              <a href="#" class="btn-default">RSVP Online &#187;</a>
+              <a href="./rsvp.html" class="btn-default">RSVP Online &#187;</a>
             </div>
           </div>
         </div>
@@ -182,7 +180,7 @@
     <!-- Footer -->
     <footer>
       <div class="container text-center text-muted">
-        <p><a href="http://www.courtneycimo.com/" target="_blank"><i class="fa fa-camera" aria-hidden="true"></i> Courtney Cimo</a></p>
+        <p><a href="http://www.courtneycimo.com/" target="_blank"><i class="fa fa-camera" aria-hidden="true"></i> Photography by Courtney Cimo</a></p>
       </div>
     </footer>
 
