Fix spacing around registry links on mobile

--- a/public/index.html
+++ b/public/index.html
@@ -126,17 +126,17 @@
           <div class="col-lg-8 mx-auto">
             <h2>Registry</h2>
             <div class="row text-center">
-              <div class="col-sm">
+              <div class="col-sm registry-link">
                 <a href="https://www.bedbathandbeyond.com/store/giftregistry/view_registry_guest.jsp?pwsToken=&eventType=Wedding&inventoryCallEnabled=true&registryId=545278823&pwsurl=" class="btn-default" target="_blank">
                   Bed Bath &amp; Beyond &#187;
                 </a>
               </div>
-              <div class="col-sm">
+              <div class="col-sm registry-link">
                 <a href="https://www.macys.com/wgl/registry/guest/6852111" class="btn-default" target="_blank">
                   Macy's &#187;
                 </a>
               </div>
-              <div class="col-sm">
+              <div class="col-sm registry-link">
                 <a href="https://www.crateandbarrel.com/gift-registry/andrew-vojak-and-amanda-miles/r5771735" class="btn-default" target="_blank">
                   Crate &amp; Barrel &#187;
                 </a>
