Fix typos; Add calligraphy headers; Add registry vectors

--- a/public/index.html
+++ b/public/index.html
@@ -29,8 +29,8 @@
       <div class="intro-body">
         <div class="container">
 
-          <img src="img/caligraphy-desktop.svg" id="caligraphy-desktop" />
-          <img src="img/caligraphy-mobile.svg" id="caligraphy-mobile" />
+          <img src="img/calligraphy-desktop.svg" id="calligraphy-desktop" />
+          <img src="img/calligraphy-mobile.svg" id="calligraphy-mobile" />
 
           <!-- <div class="row">
             <div class="col-lg-8 mx-auto"> -->
@@ -46,7 +46,7 @@
                         <a class="nav-link js-scroll-trigger" href="#wedding">Wedding</a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link js-scroll-trigger" href="#accomodations">Accomodations</a>
+                        <a class="nav-link js-scroll-trigger" href="#accommodations">accommodations</a>
                       </li>
                       <li class="nav-item">
                         <a class="nav-link js-scroll-trigger" href="#registry">Registry</a>
@@ -75,6 +75,7 @@
     <!-- Wedding Section -->
     <section id="wedding" class="content-section text-center">
       <div class="container">
+        <img src="img/wedding.svg" class="calligraphy-header" />
         <div class="row">
           <div class="col-lg-8 mx-auto">
             <p>
@@ -94,11 +95,11 @@
       </div>
     </section>
 
-    <!-- Accomodations Section -->
-    <section id="accomodations" class="content-section text-center">
+    <!-- Accommodations Section -->
+    <section id="accommodations" class="content-section text-center">
       <div class="container">
+        <img src="img/accommodations.svg" class="calligraphy-header" />
         <div class="col-lg-8 mx-auto">
-          <h2>Accomodations</h2>
           <p>
             A block of rooms has been reserved for our guests at a discounted rate. Please use the group code MILVOJ online or reference the Miles Vojak wedding when calling.
           </p>
@@ -122,23 +123,26 @@
     <!-- Registry Section -->
     <section id="registry" class="content-section text-center">
       <div class="container">
+        <img src="img/registry.svg" class="calligraphy-header" />
         <div class="row">
           <div class="col-lg-8 mx-auto">
-            <h2>Registry</h2>
-            <div class="row text-center">
+            <div class="row text-center vertical-align">
               <div class="col-sm registry-link">
-                <a href="https://www.bedbathandbeyond.com/store/giftregistry/view_registry_guest.jsp?pwsToken=&eventType=Wedding&inventoryCallEnabled=true&registryId=545278823&pwsurl=" class="btn-default" target="_blank">
-                  Bed Bath &amp; Beyond &#187;
+                <a href="https://www.bedbathandbeyond.com/store/giftregistry/view_registry_guest.jsp?pwsToken=&eventType=Wedding&inventoryCallEnabled=true&registryId=545278823&pwsurl=" target="_blank">
+                  <!-- Bed Bath &amp; Beyond &#187; -->
+                  <img src="img/bbb.svg" />
                 </a>
               </div>
               <div class="col-sm registry-link">
-                <a href="https://www.macys.com/wgl/registry/guest/6852111" class="btn-default" target="_blank">
-                  Macy's &#187;
+                <a href="https://www.macys.com/wgl/registry/guest/6852111" target="_blank">
+                  <!-- Macy's &#187; -->
+                  <img src="img/macys.svg" />
                 </a>
               </div>
               <div class="col-sm registry-link">
-                <a href="https://www.crateandbarrel.com/gift-registry/andrew-vojak-and-amanda-miles/r5771735" class="btn-default" target="_blank">
-                  Crate &amp; Barrel &#187;
+                <a href="https://www.crateandbarrel.com/gift-registry/andrew-vojak-and-amanda-miles/r5771735" target="_blank">
+                  <!-- Crate &amp; Barrel &#187; -->
+                  <img src="img/cratebarrel.svg" />
                 </a>
               </div>
             </div>
@@ -150,8 +154,8 @@
     <!-- RSVP Section -->
     <section id="rsvp" class="content-section text-center">
       <div class="container">
+        <img src="img/rsvp.svg" class="calligraphy-header" />
         <div class="col-lg-8 mx-auto">
-          <h2>RSVP</h2>
           <div class="row text-center">
             <div class="col-sm">
               <a href="./rsvp.html" class="btn-default">RSVP Online &#187;</a>
