--- a/public/rsvp.html
+++ b/public/rsvp.html
@@ -29,9 +29,9 @@
         <div class="row">
           <div class="col-lg-8 mx-auto">
 
-            <div class="caligraphy-wrapper">
-              <img src="img/caligraphy-desktop.svg" id="caligraphy-desktop" />
-              <img src="img/caligraphy-mobile.svg" id="caligraphy-mobile" />
+            <div class="calligraphy-wrapper">
+              <img src="img/calligraphy-desktop.svg" id="calligraphy-desktop" />
+              <img src="img/calligraphy-mobile.svg" id="calligraphy-mobile" />
             </div>
 
             <script type="text/javascript" src="https://app.rsvpify.com/embed/500048523"></script>
