Add remaining text content; spacing between calligraphy and navbar

--- a/public/index.html
+++ b/public/index.html
@@ -78,7 +78,7 @@
         <img src="img/wedding.svg" class="calligraphy-header" />
         <div class="row">
           <div class="col-lg-8 mx-auto">
-            <p>
+            <!-- <p>
               Ceremony: Saturday August 25, 2018; 5:00 pm; Riverside Receptions &amp; Conference Center 35 North River Lane Geneva Illinois 60134
             </p>
             <p>
@@ -89,6 +89,28 @@
             </p>
             <p>
               Attire Formal
+            </p> -->
+            <p>
+              Saturday, August 25, 2018
+            </p>
+            <p>
+              5:00 PM
+            </p>
+            <p>
+              Riverside Receptions &amp; Conference Center
+            </p>
+            <p>
+              <a href="https://goo.gl/maps/2guQE2dbioT2" target="_blank">35 North River Lane, Geneva, Illinois 60134</a>
+            </p>
+            <p>
+              Join us for a reception immediately following the ceremony at Riverside Receptions &amp; Conference Center.
+            </p>
+            <p>
+              Pleast note, we will be having an <i>Unplugged Ceremony</i>. We will ask that you turn off all cameras,
+              cell phones and other electronics until after the ceremony to be fully present during our special moment.
+            </p>
+            <p>
+              <i>Attire</i><br />Formal
             </p>
           </div>
         </div>
@@ -100,21 +122,36 @@
       <div class="container">
         <img src="img/accommodations.svg" class="calligraphy-header" />
         <div class="col-lg-8 mx-auto">
+          <a href="http://hiltongardeninn3.hilton.com/en/hotels/illinois/hilton-garden-inn-st-charles-CHISCGI/index.html" target="_blank">
+            <!-- Bed Bath &amp; Beyond &#187; -->
+            <img id="hotel-vector" src="img/hiltongardeninn.svg" />
+          </a>
           <p>
-            A block of rooms has been reserved for our guests at a discounted rate. Please use the group code MILVOJ online or reference the Miles Vojak wedding when calling.
+            A block of rooms has been reserved for our guests at a discounted rate at
+            <a href="http://hiltongardeninn3.hilton.com/en/hotels/illinois/hilton-garden-inn-st-charles-CHISCGI/index.html" target="_blank">
+              Hilton Garden Inn St. Charles</a>. Please use the group code MILVOJ online or reference the Miles Vojak wedding when calling.
           </p>
           <p>
-            Transportation will be available for guests staying at Hilton Garden Inn. Transportation will leave the hotel at 4:15 pm to Riverside Receptions. Following the reception, transportation will return at 11:30 pm.
-          </p>
-          <!-- TODO: Photo of Hilton Garden Inn St. Charles logo with link to book room with group code -->
-          <!-- TODO: Address of hotel -->
-          <!-- TODO: Google map of where hotel is located -->
-
-          <p>
-            Parking A free parking lot is available across the street from Riverside Receptions. Street parking is also avaible.
+            <a href="https://goo.gl/maps/Yy98F938DEF2" target="_blank">4070 East Main Street, St. Charles, Illinois 60147</a>
           </p>
           <p>
-            Questions? Please contact <a href="mailto:milesvojakwedding@gmail.com">milesvojakwedding@gmail.com</a>
+            <i>Transportation</i>
+          </p>
+          <p>
+            Transportation will be available for guests staying at Hilton Garden Inn. Transportation will leave the hotel at 4:15 PM
+            to Riverside Receptions. Following the reception, transportation will return at 11:30 PM.
+          </p>
+          <p>
+            <i>Parking</i>
+          </p>
+          <p>
+            A free parking lot is available across the street from Riverside Receptions. Street parking is also avaible.
+          </p>
+          <p>
+            <i>Questions?</i>
+          </p>
+          <p>
+            Please contact <a href="mailto:milesvojakwedding@gmail.com">milesvojakwedding@gmail.com</a>
           </p>
         </div>
       </div>
@@ -158,7 +195,7 @@
         <div class="col-lg-8 mx-auto">
           <div class="row text-center">
             <div class="col-sm">
-              <a href="./rsvp.html" class="btn-default">RSVP Online &#187;</a>
+              <a href="./rsvp.html" class="btn-default">RSVP Here</a>
             </div>
           </div>
         </div>
