--- a/public/index.html
+++ b/public/index.html
@@ -29,45 +29,36 @@
       <div class="intro-body">
         <div class="container">
 
-          <img src="img/calligraphy-desktop.svg" id="calligraphy-desktop" />
-          <img src="img/calligraphy-mobile.svg" id="calligraphy-mobile" />
+          <div class="calligraphy-wrapper">
+            <img src="img/calligraphy-desktop.svg" id="calligraphy-desktop" />
+            <img src="img/calligraphy-mobile.svg" id="calligraphy-mobile" />
+          </div>
 
-          <!-- <div class="row">
-            <div class="col-lg-8 mx-auto"> -->
-              <nav class="navbar navbar-expand-lg navbar-light" data-toggle="sticky-onscroll" id="mainNav">
-                <div class="container">
-                  <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-                    Menu
-                    <i class="fa fa-bars"></i>
-                  </button>
-                  <div class="collapse navbar-collapse" id="navbarResponsive">
-                    <ul class="navbar-nav ml-auto nav-fill w-100">
-                      <li class="nav-item">
-                        <a class="nav-link js-scroll-trigger" href="#wedding">Wedding</a>
-                      </li>
-                      <li class="nav-item">
-                        <a class="nav-link js-scroll-trigger" href="#accommodations">accommodations</a>
-                      </li>
-                      <li class="nav-item">
-                        <a class="nav-link js-scroll-trigger" href="#registry">Registry</a>
-                      </li>
-                      <li class="nav-item">
-                        <a class="nav-link js-scroll-trigger" href="#rsvp">RSVP</a>
-                      </li>
-                    </ul>
-                  </div>
-                </div>
-              </nav>
-            <!-- </div>
-          </div> -->
-
-          <!-- <div class="row">
-            <div class="col-lg-8 mx-auto">
-              <a href="#wedding" class="btn btn-circle js-scroll-trigger">
-                <i class="fa fa-angle-double-down animated"></i>
-              </a>
+          <nav class="navbar navbar-expand-lg navbar-light" data-toggle="sticky-onscroll" id="mainNav">
+            <div class="container">
+              <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+                Menu
+                <i class="fa fa-bars"></i>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarResponsive">
+                <ul class="navbar-nav ml-auto nav-fill w-100">
+                  <li class="nav-item">
+                    <a class="nav-link js-scroll-trigger" href="#wedding">Wedding</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link js-scroll-trigger" href="#accommodations">accommodations</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link js-scroll-trigger" href="#registry">Registry</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link js-scroll-trigger" href="#rsvp">RSVP</a>
+                  </li>
+                </ul>
+              </div>
             </div>
-          </div> -->
+          </nav>
+
         </div>
       </div>
     </header>
@@ -78,18 +69,6 @@
         <img src="img/wedding.svg" class="calligraphy-header" />
         <div class="row">
           <div class="col-lg-8 mx-auto">
-            <!-- <p>
-              Ceremony: Saturday August 25, 2018; 5:00 pm; Riverside Receptions &amp; Conference Center 35 North River Lane Geneva Illinois 60134
-            </p>
-            <p>
-              Join us for a reception immediately following the ceremony at Riverside Receptions &amp; Conference Center.
-            </p>
-            <p>
-              Pleast note, we will be having an Unplugged Ceremony. We will ask that you turn off all cameras, cell phones and other electronics until after the ceremony to be fully present during our special moment.
-            </p>
-            <p>
-              Attire Formal
-            </p> -->
             <p>
               Saturday, August 25, 2018
             </p>
@@ -123,7 +102,6 @@
         <img src="img/accommodations.svg" class="calligraphy-header" />
         <div class="col-lg-8 mx-auto">
           <a href="http://hiltongardeninn3.hilton.com/en/hotels/illinois/hilton-garden-inn-st-charles-CHISCGI/index.html" target="_blank">
-            <!-- Bed Bath &amp; Beyond &#187; -->
             <img id="hotel-vector" src="img/hiltongardeninn.svg" />
           </a>
           <p>
@@ -164,21 +142,21 @@
         <div class="row">
           <div class="col-lg-8 mx-auto">
             <div class="row text-center vertical-align">
+              <!-- Bed Bath & Beyond -->
               <div class="col-sm registry-link">
                 <a href="https://www.bedbathandbeyond.com/store/giftregistry/view_registry_guest.jsp?pwsToken=&eventType=Wedding&inventoryCallEnabled=true&registryId=545278823&pwsurl=" target="_blank">
-                  <!-- Bed Bath &amp; Beyond &#187; -->
                   <img src="img/bbb.svg" />
                 </a>
               </div>
+              <!-- Macy's -->
               <div class="col-sm registry-link">
                 <a href="https://www.macys.com/wgl/registry/guest/6852111" target="_blank">
-                  <!-- Macy's &#187; -->
                   <img src="img/macys.svg" />
                 </a>
               </div>
+              <!-- Crate & Barrel -->
               <div class="col-sm registry-link">
                 <a href="https://www.crateandbarrel.com/gift-registry/andrew-vojak-and-amanda-miles/r5771735" target="_blank">
-                  <!-- Crate &amp; Barrel &#187; -->
                   <img src="img/cratebarrel.svg" />
                 </a>
               </div>
